--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,29 +1,59 @@
 <div class='container'>
-  
+<%= render 'layouts/errors', obj: @book_comment %>
   <div class='row'>
+
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: @book.user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @new_book %>
+      <%= render 'books/form', book: @new_book %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
   		    <td><%= link_to user_path(@book.user) do %>
-            <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+            <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg", size: "100x100") %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
+          <% if @book.favorited_by?(current_user) %>
+            <td><%= link_to "♥#{@book.favorites.count}", book_favorites_path(@book.id), method: :delete, class: "favorited" %></td>
+          <% else %>
+            <td><%= link_to "♥#{@book.favorites.count}", book_favorites_path(@book.id), method: :post %></td>
+          <% end %>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
+      <table class="table">
+        <% @book.book_comments.each do |comment| %>
+          <tr>
+            <td>
+              <%= link_to user_path(comment.user.id) do %>
+                <%= attachment_image_tag(comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg", size: "50x50") %><br>
+                <%= comment.user.name %>
+              <% end %>
+            </td>
+            <td><%= comment.body %></td>
+            <td>
+              <% if comment.user == current_user %>
+                <%= link_to "Destroy", book_book_comment_path(book_id: comment.book.id, id: comment.id), method: :delete, class: "btn btn-sm btn-danger" %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+      <%= form_with model: [@book, @book_comment], local:true do |f| %>
+        <div class="form-group">
+          <%= f.text_area :body, class: "form-control" %>
+          <%= f.submit "送信" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
