--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,11 +16,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
-          <td><%= link_to "♥#{book.favorites.count}", book_favorites_path(book.id), method: :delete, class: "favorited" %></td>
-        <% else %>
-          <td><%= link_to "♥#{book.favorites.count}", book_favorites_path(book.id), method: :post %></td>
-        <% end %>
+        <%= render "favorites/favorite-btn", book: book %>
         <td><%= "コメント数：#{book.book_comments.count}"%></td>
       </tr>
     <% end %>
