--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,11 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg", size: "50x50") %></td>
         <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followeds.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <td>
+          <%= render "relationships/follow-btn", user: user %>
+        </td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
