--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,9 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <%= render "favorites/favorite-btn", book: @book %>
+          <td id="favorite-btn-<%= @book.id %>">
+            <%= render "favorites/favorite-btn", book: @book %>
+          </td>
           <td><%= "コメント数: #{@book.book_comments.count}"%></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -25,7 +27,9 @@
           <% end %>
         </tr>
       </table>
-      <%= render "books/comments", {book: @book, book_comment: @book_comment} %>
+      <div class="books-comments">
+        <%= render "books/comments", {book: @book, book_comment: BookComment.new } %>
+      </div>
     </div>
   </div>
 </div>
