--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,5 +1,5 @@
 <% if book.favorited_by?(current_user) %>
-  <td><%= link_to book.favorites.count, book_favorites_path(book.id), method: :delete, class: "fas fa-heart heart_red" %></td>
+  <%= link_to book.favorites.count, book_favorites_path(book.id), method: :delete, class: "fas fa-heart heart_red", remote: true %>
 <% else %>
-  <td><%= link_to book.favorites.count, book_favorites_path(book.id), method: :post, class: "fas fa-heart heart_blue" %></td>
+  <%= link_to book.favorites.count, book_favorites_path(book.id), method: :post, class: "fas fa-heart heart_blue ", remote: true %>
 <% end %>
