[Fix]コメント数の更新機能追加,エラーメッセージ表示

--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,2 +1,2 @@
 $(".books-comments").html("<%= j(render "books/comments", {book: @book, book_comment: BookComment.new }) %>");
-$(".comment-form").val("");
+$(".comments-count").html("<%= "コメント数: #{@book.book_comments.count}"%>");
