--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,2 +1,3 @@
 $(".books-comments").html("<%= j(render "books/comments", {book: @book, book_comment: BookComment.new }) %>");
+$(".comments-count").html("<%= "コメント数: #{@book.book_comments.count}"%>");
 $(".comment-form").val("");
