--- a/app/views/users/_posts_data.html.erb
+++ b/app/views/users/_posts_data.html.erb
@@ -31,3 +31,59 @@
     </tr>
   </tbody>
 </table>
+<h2>7日間分の投稿数</h2>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <% @days.each do |day| %>
+        <th><%= day %></th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <% @datas.each do |data| %>
+        <td><%= data %></td>
+      <% end %>
+    </tr>
+  </tbody>
+</table>
+
+<canvas id="myLineChart"></canvas>
+
+<script>
+$(document).on('turbolinks:load', function() {
+  var days = <%== @days %>
+  var datas = <%= @datas %>
+  var ctx = document.getElementById("myLineChart");
+  var myLineChart = new Chart(ctx, {
+    type: 'line',
+    data: {
+      labels: days,
+      datasets: [
+        {
+          label: '投稿した本の数',
+          data: datas,
+          borderColor: "rgba(0,0,255,1)",
+          backgroundColor: "rgba(0,0,0,0)"
+        }
+      ],
+    },
+    options: {
+      title: {
+        display: true,
+        text: '7日間分の投稿数'
+      },
+      scales: {
+        yAxes: [{
+          ticks: {
+            suggestedMax: 10,
+            suggestedMin: 0,
+            stepSize: 1
+          }
+        }]
+      },
+    }
+  });
+});
+</script>
