[Finish]グループメンバー追加機能実装

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,7 +8,7 @@
       <%= render 'books/form', book: Book.new %>
     </div>
     <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
+      <h2>Groups</h2>
       <div class="books_index">
         <%= render 'groups/index', groups: @groups %>
       </div>
