--- a/app/views/groups/_detail.html.erb
+++ b/app/views/groups/_detail.html.erb
@@ -1,14 +1,36 @@
 <table class='table'>
-  <tr>
-    <td>
-      <%= attachment_image_tag(group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg", size: "50x50") %>
-    </td>
-    <td><%= group.name %></td>
-    <td><%= group.introduction %></td>
-    <td>
-      <% if group.owner_id == current_user.id %>
-        <%= link_to 'Edit', edit_group_path(group.id), class: "btn btn-sm btn-success" %>
-      <% end %>
-    </td>
-  </tr>
+  <thead>
+    <tr>
+      <th></th>
+      <th>グループ名</th>
+      <th>紹介文</th>
+      <th>メンバー</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <%= attachment_image_tag(group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg", size: "50x50") %>
+      </td>
+      <td><%= group.name %></td>
+      <td><%= group.introduction %></td>
+      <td>
+        <% group.users.each do |user| %>
+          <%= user.name %><br>
+        <% end %>
+      </td>
+      <td>
+        <% if group.owner_id == current_user.id %>
+          <%= link_to 'Edit', edit_group_path(group.id), class: "btn btn-sm btn-success" %>
+        <% else %>
+          <% if group.users.find_by(id: current_user.id) %>
+            <%= link_to "Leave this group", group_group_users_path(params[:id]), method: :delete, class:"btn btn-sm btn-danger" %>
+          <% else %>
+            <%= link_to "Join this group", group_group_users_path(params[:id]), method: :post, class:"btn btn-sm btn-success" %>
+          <% end %>
+        <% end %>
+      </td>
+    </tr>
+  </tbody>
 </table>
