--- a/app/views/groups/_index.html.erb
+++ b/app/views/groups/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>グループ名</th>
       <th>紹介文</th>
+      <th>メンバー数</th>
       <th></th>
     </tr>
   </thead>
@@ -13,9 +14,10 @@
         <td><%= attachment_image_tag(group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= link_to group.name, group_path(group) %></td>
         <td><%= group.introduction %></td>
+        <td><%= group.users.count %></td>
         <td>
           <% if group.owner_id == current_user.id %>
-            <%= link_to "Edit", edit_group_path(group.id), class:"btn btn-success" %>
+            <%= link_to "Edit", edit_group_path(group.id), class:"btn btn-sm btn-success" %>
           <% end %>
         </td>
       </tr>
