--- a/app/views/books/_detail.html.erb
+++ b/app/views/books/_detail.html.erb
@@ -12,6 +12,7 @@
     </td>
     <td class="comments-count"><%= "コメント数: #{book.book_comments.count}"%></td>
     <td class="pv-count"><%= "閲覧数: #{book.impressionist_count}"%></td>
+    <td><%= render "books/evaluation", obj: book %></td>
     <% if book.user == current_user %>
       <td><%= link_to 'Edit', edit_book_path(book), class: "btn btn-sm btn-success edit_book_#{book.id}" %></td>
       <td><%= link_to 'Destroy', book_path(book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{book.id}"%></td>
