--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
   <div class="form-group">
+    <%= f.label :rate %>
+    <%= render "books/evaluation", obj: book %>
+  </div>
+  <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
