--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -21,6 +21,7 @@
         </td>
         <td><%= "コメント数: #{book.book_comments.count}"%></td>
         <td><%= "閲覧数: #{book.impressionist_count}"%></td>
+        <td><%= render "books/evaluation", obj: book %></td>
       </tr>
     <% end %>
   </tbody>
