--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,6 +9,7 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      <%= link_to "新しい順", books_path(sort_by: "created_at DESC") %> | <%= link_to "評価の高い順", books_path(sort_by: "evaluation DESC") %>
       <div class="books_index">
         <%= render 'index', books: @books %>
       </div>
