[Finish]カテゴリー追加

--- a/app/views/books/_evaluation.html.erb
+++ b/app/views/books/_evaluation.html.erb
@@ -1,7 +1,7 @@
-<div id="<%= obj.id %>-evaluation"></div>
+<div id="evaluation-<%= obj.id %>"></div>
 
 <script>
-  $("#<%= obj.id %>-evaluation").raty({
+  $("#evaluation-<%= obj.id %>").raty({
     starOn: "<%= asset_path('star-on.png') %>",
     starOff: "<%= asset_path('star-off.png') %>",
     starHalf: "<%= asset_path('star-half.png') %>",
