--- a/app/views/books/_detail.html.erb
+++ b/app/views/books/_detail.html.erb
@@ -7,6 +7,7 @@
     </td>
     <td><%= link_to book.title, book_path(book) %></td>
     <td><%= book.body %></td>
+    <td><%= book.category %></td>
     <td id="favorite-btn-<%= book.id %>">
       <%= render "favorites/favorite-btn", book: book %>
     </td>
