--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td><%= link_to book.category, user_path(id: book.user.id, category: book.category) %></td>
         <td id="favorite-btn-<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
         </td>
