--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,12 @@
           <li><%= link_to ' Users',users_path,class: 'fas fa-users nav-link text-light' %></li>
           <li><%= link_to ' Books',books_path ,class: 'fas fa-book-open nav-link text-light'%></li>
           <li><%= link_to ' logout', destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+          <li>
+            <%= form_with url: user_path(current_user.id), method: :get, local: true do |f| %>
+              <%= f.text_field :category, class:"form_control" %>
+              <%= f.submit "検索", class:"btn btn-info" %>
+            <% end %>
+          </li>
         <% else %>
           <li><%= link_to ' Home',root_path,class: 'fas fa-home nav-link text-light' %></li>
           <li><%= link_to ' About',home_about_path,class: 'fas fa-link nav-link text-light' %></li>
